branched to practice using flexbox

--- a/RoseLin.html
+++ b/RoseLin.html
@@ -7,7 +7,7 @@
     <meta name="description" content="A practice portfolio page">
     <meta name="keywords" content="Rose Lin, developer, HTML, CSS, portfolio, practice, freeCodeCamp">
     <meta name="author" content="Rose Lin">
-    <link href="main.css" type="text/css" rel="stylesheet">
+    <link href="CSS/main.css" type="text/css" rel="stylesheet">
   </head>
   <body>
     <!-- Header with social media links and logo -->
