applied Google API fonts & small update to README for future projects

--- a/RoseLin.html
+++ b/RoseLin.html
@@ -8,6 +8,7 @@
     <meta name="keywords" content="Rose Lin, developer, HTML, CSS, portfolio, practice, freeCodeCamp">
     <meta name="author" content="Rose Lin">
     <link href="CSS/main.css" type="text/css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Great+Vibes|Raleway" rel="stylesheet">
   </head>
   <body>
   <!-- Header with social media links and logo -->
@@ -18,7 +19,7 @@
         <div id="Instagram"><a href="https://www.instagram.com/thebarbreaker/?hl=en"><img src="http://www.topicalbiomedics.com/img/social/instagram.png" alt="Instagram logo"></a></div>
       </div>
       <div class="Logo">
-        <h1><strong>Rose Lin</strong></h1>
+        <h1><span style="color: #0d2636; font-family: 'Great Vibes', cursive;">Rose Lin</span></h1>
       </div>
       <div class="empty"></div>
     </header>
